fix root color / add navbar scrollbar

--- a/src/app/components/wrapper/navbar/navbar.component.scss
+++ b/src/app/components/wrapper/navbar/navbar.component.scss
@@ -13,6 +13,27 @@ main{
     z-index: 5;
   }
   article{
-    height: 90%;
+    height: 85%;
     overflow-y: auto;
   }
+  /* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--color-blue-bg); 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--color-blue-primary-hover); 
+}
