--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,17 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 :root{
   --color-black: black;
+  --color-white: white;
 
   --color-blue-primary-default: #444DF2;
   --color-blue-primary-hover: #797EF3;
   --color-blue-secondary-hover: #535AF1;
+  --color-blue-bg:#ECEEFE;
 
   --color-grey-primary-disable:#686868;
   --color-grey-hover:#E6E6E6;
   
   --color-green:#92C83E;
   --color-purple-error: #ED1E79;
-  --color-white:#ECEEFE;
   
   --sice-avatar_desktop: 168px;
   --sice-avatar_desktop-small: 64px;
